--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,10 @@ dependencies = [
 ]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.8.3,<0.9.0"]
+build-backend = "uv_build"
+
+[dependency-groups]
+build = [
+    "uv-build>=0.8.3",
+]
